plugins {
    id 'groovy'
    id 'jacoco'
    id 'java-gradle-plugin'
    id 'com.gradle.plugin-publish' version '2.1.1'
    id 'pl.allegro.tech.build.axion-release' version '1.21.1'
}

group = 'io.github.ximtech.jasypt-encrypt-plugin'

gradlePlugin {
    plugins {
        jasyptGradlePlugin {
            id = 'io.github.ximtech.jasypt-encrypt-plugin'
            displayName = 'Jasypt Encrypt Plugin'
            description = 'Property and Yaml encryption/decryption with configuration'
            implementationClass = 'com.github.jasypt.encrypt.JasyptPlugin'
            tags = ['jasypt', 'encrypt', 'decrypt', 'properties', 'yaml']
        }
    }
    website = 'https://github.com/ximtech/jasypt-encrypt-plugin'
    vcsUrl = 'https://github.com/ximtech/jasypt-encrypt-plugin'
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

repositories {
    mavenCentral()
}

configurations {
    // configuration that holds jars to include in the jar
    includeLibrary
}

scmVersion {
    useHighestVersion = true
    tag {
        prefix = ''
        initialVersion({ config, position -> "1.0.0" })
    }
    snapshotCreator({ version, position -> "" })
    
    versionIncrementer { context ->
        def commitMessages = project.providers.exec {commandLine 'git', 'log', '-10', '--pretty=%s'}
        def lastCommitMessage = commitMessages.standardOutput.asText.get()
                .readLines()
                .findAll { it?.trim() && !it.startsWith('Merge') }[0]
        
        def hasBreaking = lastCommitMessage.contains('BREAKING CHANGE') || lastCommitMessage.startsWith('feat!:')
        def hasFeature = lastCommitMessage.startsWith('feat:')
        if (hasBreaking) {
            println("Inferred a new MAJOR version.")
            return context.currentVersion.incrementMajorVersion()
        } else if (hasFeature) {
            println("Inferred a new MINOR version.")
            return context.currentVersion.incrementMinorVersion()
        } else {
            println("Inferred a new PATCH version.")
            return context.currentVersion.incrementPatchVersion()
        }
    }

    checks {
        uncommittedChanges = false
    }
}

version = scmVersion.version

tasks.register("printVersion") {
    doLast {
        println project.version
    }
}

dependencies {
    includeLibrary 'org.jasypt:jasypt:1.9.3'
    includeLibrary 'com.tvd12:properties-file:1.1.8'
    // Testing, Spock, Groovy
    testImplementation "org.codehaus.groovy:groovy:3.0.21"
    testImplementation "org.spockframework:spock-core:2.3-groovy-3.0"
    testImplementation "junit:junit:4.13.2"
    configurations.implementation.extendsFrom(configurations.includeLibrary)
}

jar {
    enabled = true
    java
    from {
        configurations.includeLibrary.collect { it.isDirectory() ? it : zipTree(it) }
    }
    javadoc {
        enabled = false
    }
}

test {
    useJUnitPlatform()
    classpath = sourceSets.test.runtimeClasspath
}

tasks.withType(Test) {
    jvmArgs('--add-opens=java.base/java.lang=ALL-UNNAMED')
}

jacoco {
    toolVersion = "0.8.10"
}

jacocoTestReport {
    reports {
        xml.required = true
        csv.required = false
        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
    }
    dependsOn test // tests are required to run before generating the report
}
